--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Iphone Landing Page</title>
     <link href="/dist/output.css" rel="stylesheet">
 </head>
-<body>
+<body class="max-w-screen-2xl mx-auto text-neutral-900 ">
     
+
+  <h1>Hello World</h1>
+
+
+
+
+
+
+    <script  type = "module" src="/src/main.js"></script>
 </body>
 </html>
